--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ subprojects {
     apply plugin: 'com.github.johnrengelman.shadow'
 
     group = 'me.lucko.luckperms.placeholders'
-    version = '5.4-SNAPSHOT'
+    version = '5.4-1.21'
 
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
