--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,8 @@ subprojects {
     group = 'me.lucko.luckperms.placeholders'
     version = '5.4-1.21'
 
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 
     repositories {
         mavenLocal()
